# lab3

./: CMakeLists.txt  Doxyfile  README.md
args/: CMakeLists.txt  args.c  args.h
docs/html/: annotated.html  annotated_dup.js  classes.html  deque_8c.html  deque_8c.js  deque_8h.html  deque_8h.js  deque_8h_source.html  dir_0b61c55142250c0cc363383afd8075a4.html  dir_0b61c55142250c0cc363383afd8075a4.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_9e626b37dd3e5c86639625184180edf5.html  dir_9e626b37dd3e5c86639625184180edf5.js  doxygen_crawl.html  files.html  functions.html  functions_vars.html  generator_8c.html  generator_8c.js  generator_8h.html  generator_8h.js  generator_8h_source.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  house_8c.html  house_8c.js  house_8h.html  house_8h.js  house_8h_source.html  index.html  io_8c.html  io_8c.js  io_8h.html  io_8h.js  io_8h_source.html  (+20 more)
docs/latex/: annotated.tex  deque_8c.tex  deque_8h.tex  deque_8h_source.tex  dir_0b61c55142250c0cc363383afd8075a4.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_9e626b37dd3e5c86639625184180edf5.tex  dirs.tex  files.tex  generator_8c.tex  generator_8h.tex  generator_8h_source.tex  house_8c.tex  house_8h.tex  house_8h_source.tex  io_8c.tex  io_8h.tex  io_8h_source.tex  main_8c.tex  md__r_e_a_d_m_e.tex  refman.tex  sort_8c.tex  sort_8h.tex  sort_8h_source.tex  struct_deque.tex  struct_house.tex  struct_node.tex
src/: benchmark.c  generator.c  generator.h  house.c  house.h  io.c  io.h  main.c
src/algs/: CMakeLists.txt  quick_sort.c  quick_sort.h  sort.c  sort.h
src/containers/: CMakeLists.txt  deque.c  deque.h
src/house/: CMakeLists.txt  house.c  house.h
src/io/: CMakeLists.txt  io.c  io.h
(+43 files in other folders)
